// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Layout Container 1`] = `
<div
  className="sc-bdfBwQ sc-gsTCUz bFhuNW kNNlrj"
  height="100vh"
>
  This is a responsive container
</div>
`;

exports[`Storyshots Atoms/Layout Grid 1`] = `
<div
  className="sc-bdfBwQ sc-dlfnbm bFhuNW dYmuJF"
  height="100vh"
>
  This is a responsive Grid
</div>
`;

exports[`Storyshots Atoms/Typography Heading 1`] = `
<div
  className="sc-bdfBwQ sc-gsTCUz  kNNlrj"
>
  <h1
    className="sc-bdfBwQ sc-hKgILt sc-eCssSg  cTxziC kEjxqG"
  >
    Mountain UI library
  </h1>
  <h2
    className="sc-bdfBwQ sc-hKgILt sc-eCssSg  cTxziC jAzxnd"
  >
    Mountain UI library
  </h2>
  <h3
    className="sc-bdfBwQ sc-hKgILt sc-eCssSg  cTxziC jmGPhr"
  >
    Mountain UI library
  </h3>
  <h4
    className="sc-bdfBwQ sc-hKgILt sc-eCssSg  cTxziC gzQKTa"
  >
    Mountain UI library
  </h4>
  <h5
    className="sc-bdfBwQ sc-hKgILt sc-eCssSg  cTxziC jMLdHy"
  >
    Mountain UI library
  </h5>
  <h6
    className="sc-bdfBwQ sc-hKgILt sc-eCssSg  cTxziC dROxyE"
  >
    Mountain UI library
  </h6>
  <div
    className="sc-bdfBwQ sc-hKgILt  eIleIv"
    fontSize="body"
  >
    Mountain UI library
  </div>
  <div
    className="sc-bdfBwQ sc-hKgILt  dIKksG"
    fontSize="secondaryBody"
  >
    Mountain UI library
  </div>
  <div
    className="sc-bdfBwQ sc-hKgILt  laatu"
    fontSize="sub"
  >
    Mountain UI library
  </div>
  <div
    className="sc-bdfBwQ sc-hKgILt  XsOPt"
    fontSize="caption"
  >
    Mountain UI library
  </div>
</div>
`;
